Support Cocoa image reader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ rav1e = { git = "https://github.com/xiph/rav1e" }
 rayon = "1.4.0"
 rgb = "0.8.24"
 nasm-rs = "=0.1.7"
+cocoa_image = { version = "1.0.4", optional = true }
+imgref = "1.7.0"
 
 [profile.dev.package.rav1e]
 opt-level = 2
