--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cavif"
 description = "Encodes images in AVIF format (png2avif converter). Pure Rust."
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -18,7 +18,7 @@ clap = "2.33.3"
 lodepng = "3.2.1"
 num_cpus = "1.13.0"
 pico-args = "0.3.4"
-rav1e = { git = "https://github.com/xiph/rav1e" }
+rav1e = "0.3.3"
 rayon = "1.4.0"
 rgb = "0.8.24"
 nasm-rs = "=0.1.7"
@@ -30,3 +30,6 @@ opt-level = 2
 
 [profile.dev.package.lodepng]
 opt-level = 2
+
+[dev-dependencies]
+avif-parse = "0.12.0"
