--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "cavif"
 description = "Encodes images in AVIF format (png2avif converter). Pure Rust."
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
 readme = "README.md"
-keywords = ["avif", "png2avif", "convert", "av1"]
+keywords = ["avif", "png2avif", "jpeg2avif", "convert", "av1"]
 categories = ["command-line-utilities", "multimedia::images", "multimedia::encoding"]
 homepage = "https://lib.rs/cavif"
 repository = "https://github.com/kornelski/cavif"
@@ -24,6 +24,7 @@ rgb = "0.8.24"
 nasm-rs = "=0.1.7"
 cocoa_image = { version = "1.0.4", optional = true }
 imgref = "1.7.0"
+jpeg-decoder = "0.1.20"
 
 [profile.dev.package.rav1e]
 opt-level = 2
