--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cavif"
-description = "Encodes images in AVIF format (png2avif converter). Pure Rust."
-version = "0.3.0"
+description = "Encodes images in AVIF format (image2avif converter). Pure Rust."
+version = "0.4.0"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -25,6 +25,7 @@ nasm-rs = "=0.1.7"
 cocoa_image = { version = "1.0.4", optional = true }
 imgref = "1.7.0"
 jpeg-decoder = "0.1.20"
+loop9 = "0.1.2"
 
 [profile.dev.package.rav1e]
 opt-level = 2
