--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cavif"
 description = "Encodes images in AVIF format (image2avif converter). Pure Rust."
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -9,7 +9,7 @@ readme = "README.md"
 keywords = ["avif", "png2avif", "jpeg2avif", "convert", "av1"]
 categories = ["command-line-utilities", "multimedia::images", "multimedia::encoding"]
 homepage = "https://lib.rs/cavif"
-repository = "https://github.com/kornelski/cavif"
+repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 
 [dependencies]
@@ -26,11 +26,8 @@ imgref = "1.7.0"
 jpeg-decoder = "0.1.20"
 loop9 = "0.1.3"
 
-[profile.dev.package.rav1e]
-opt-level = 2
-
-[profile.dev.package.lodepng]
+[profile.dev.package."*"]
 opt-level = 2
 
 [dev-dependencies]
-avif-parse = "0.12.3"
+avif-parse = "0.13.0"
