--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cavif"
 description = "Encodes images in AVIF format (image2avif converter). Pure Rust."
-version = "0.6.1"
+version = "0.6.2"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -13,17 +13,15 @@ repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 
 [dependencies]
-avif-serialize = "0.6.4"
+ravif = { version = "0.6.1", path = "./ravif" }
 lodepng = "3.2.1"
 num_cpus = "1.13.0"
 pico-args = "0.3.4"
-rav1e = { default-features = false, git = "https://github.com/xiph/rav1e" }
 rayon = "1.4.0"
 rgb = "0.8.25"
 cocoa_image = { version = "1.0.4", optional = true }
 imgref = "1.7.0"
 jpeg-decoder = "0.1.20"
-loop9 = "0.1.3"
 
 [profile.release]
 lto = true
