--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ravif"
 description = "rav1e-based pure Rust library for encoding images in AVIF format (powers the `cavif` tool)"
-version = "0.6.1"
+version = "0.6.2"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -15,7 +15,7 @@ include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 [dependencies]
 avif-serialize = "0.6.4"
 num_cpus = "1.13.0"
-rav1e = { default-features = false, git = "https://github.com/xiph/rav1e" }
+rav1e = { version = "0.4.0-alpha", default-features = false }
 rayon = "1.4.0"
 rgb = "0.8.25"
 imgref = "1.7.0"
