Add optional, default enabled asm feature to pass to rav1e
If enabled, this greatly increases encoding speed.
On my machine I'm down from 15 seconds to 3 seconds for a 6k picture.

--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -21,6 +21,10 @@ rgb = "0.8.25"
 imgref = "1.7.0"
 loop9 = "0.1.3"
 
+[features]
+default = ["asm"]
+asm = ["rav1e/asm"]
+
 [profile.release]
 lto = true
 
