--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 
 [dependencies]
-ravif = { version = "0.6.1", path = "./ravif" }
+ravif = { version = "0.6.1", path = "./ravif", default-features = false }
 lodepng = "3.2.1"
 num_cpus = "1.13.0"
 pico-args = "0.3.4"
@@ -22,6 +22,10 @@ rgb = "0.8.25"
 cocoa_image = { version = "1.0.4", optional = true }
 imgref = "1.7.0"
 jpeg-decoder = "0.1.20"
+
+[features]
+default = ["asm"]
+asm = ["ravif/asm"]
 
 [profile.release]
 lto = true
