--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cavif"
 description = "Encodes images in AVIF format (image2avif converter). Pure Rust."
-version = "0.6.3"
+version = "0.6.4"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -22,6 +22,7 @@ rgb = "0.8.25"
 cocoa_image = { version = "1.0.4", optional = true }
 imgref = "1.7.0"
 jpeg-decoder = "0.1.20"
+clap = { version = "2.33.3", default-features = false, features = ["color", "suggestions", "wrap_help"] }
 
 [features]
 default = ["asm"]
