--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ravif"
 description = "rav1e-based pure Rust library for encoding images in AVIF format (powers the `cavif` tool)"
-version = "0.6.3"
+version = "0.6.4"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -13,12 +13,12 @@ repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 
 [dependencies]
-avif-serialize = "0.6.4"
+avif-serialize = "0.6.5"
 num_cpus = "1.13.0"
-rav1e = { version = "0.4.0-alpha", default-features = false }
-rayon = "1.4.0"
+rav1e = { version = "0.4.0", default-features = false }
+rayon = "1.5.0"
 rgb = "0.8.25"
-imgref = "1.7.0"
+imgref = "1.7.1"
 loop9 = "0.1.3"
 
 [features]
