--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ravif"
 description = "rav1e-based pure Rust library for encoding images in AVIF format (powers the `cavif` tool)"
-version = "0.8.4"
+version = "0.8.5"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2018"
 license = "BSD-3-Clause"
@@ -11,15 +11,19 @@ categories = ["multimedia::images", "multimedia::encoding"]
 homepage = "https://lib.rs/ravif"
 repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
+resolver = "2"
 
 [dependencies]
 avif-serialize = "0.7.2"
 num_cpus = "1.13.0"
-rav1e = { version = "0.5.0-alpha", default-features = false }
+rav1e = { git = "https://github.com/xiph/rav1e", rev="f6c841fe9234e9e08a801e884bec1d91a3c6f9f4", default-features = false }
 rayon = "1.5.1"
 rgb = "0.8.27"
 imgref = "1.9.0"
 loop9 = "0.1.3"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+rav1e = { git = "https://github.com/xiph/rav1e", rev="f6c841fe9234e9e08a801e884bec1d91a3c6f9f4", features = ["wasm"] }
 
 [features]
 default = ["asm"]
