--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -14,16 +14,16 @@ include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 resolver = "2"
 
 [dependencies]
-avif-serialize = "0.7.2"
+avif-serialize = "0.7.5"
 num_cpus = "1.13.0"
-rav1e = { version = "0.5.0-beta", default-features = false }
+rav1e = { version = "0.5.0-beta.2", default-features = false }
 rayon = "1.5.1"
 rgb = "0.8.27"
 imgref = "1.9.1"
 loop9 = "0.1.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-rav1e = { version = "0.5.0-beta", features = ["wasm"] }
+rav1e = { version = "0.5.0-beta.2", features = ["wasm"] }
 
 [features]
 default = ["asm"]
