--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -22,7 +22,7 @@ rgb = "0.8.29"
 imgref = "1.9.1"
 loop9 = "0.1.3"
 
-[target.'cfg(target_arch = "wasm32")'.dependencies]
+[target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
 rav1e = { version = "0.5.0", features = ["wasm"] }
 
 [features]
