--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "cavif"
-description = "Encodes images in AVIF format (image2avif converter). Pure Rust."
-version = "1.3.5"
+description = "Encodes images in AVIF format (image2avif converter) using a pure-Rust encoder."
+version = "1.4.0"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
-edition = "2018"
+edition = "2021"
 license = "BSD-3-Clause"
 readme = "README.md"
 keywords = ["avif", "png2avif", "jpeg2avif", "convert", "av1"]
@@ -11,21 +11,22 @@ categories = ["command-line-utilities", "multimedia::images", "multimedia::encod
 homepage = "https://lib.rs/cavif"
 repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
+rust-version = "1.60"
 
 [dependencies]
 ravif = { version = "0.9", path = "./ravif", default-features = false }
-lodepng = "3.6.1"
 num_cpus = "1.13.1"
 rayon = "1.5.2"
 rgb = "0.8.32"
 cocoa_image = { version = "1.0.5", optional = true }
-imgref = "1.9.1"
-jpeg-decoder = "0.2.4"
-clap = { version = "3.1.10", default-features = false, features = ["color", "suggestions", "wrap_help", "std", "cargo"] }
+imgref = "1.9.4"
+clap = { version = "3.2.22", default-features = false, features = ["color", "suggestions", "wrap_help", "std", "cargo"] }
+load_image = "3.0.0"
 
 [features]
-default = ["asm"]
+default = ["asm", "static"]
 asm = ["ravif/asm"]
+static = ["load_image/lcms2-static"]
 
 [profile.dev]
 opt-level = 1
