--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -20,6 +20,7 @@ rayon = "1.5.3"
 rgb = "0.8.34"
 imgref = "1.9.4"
 loop9 = "0.1.3"
+quick-error = "2.0.1"
 
 [target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
 rav1e = { version = "0.5.1", features = ["wasm"] }
