--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ravif"
 description = "rav1e-based pure Rust library for encoding images in AVIF format (powers the `cavif` tool)"
-version = "0.9.3"
+version = "0.9.4"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2021"
 license = "BSD-3-Clause"
@@ -14,7 +14,7 @@ include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 
 [dependencies]
 avif-serialize = "0.7.7"
-rav1e = { version = "0.6", default-features = false }
+rav1e = { version = "0.6.1", default-features = false, features = ["threading"] }
 rayon = "1.5.3"
 rgb = "0.8.34"
 imgref = "1.9.4"
