--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -20,6 +20,7 @@ rgb = "0.8.34"
 imgref = "1.9.4"
 loop9 = "0.1.3"
 quick-error = "2.0.1"
+load_image = "3.0.1"
 
 [target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
 rav1e = { version = "0.6.3", features = ["wasm"] }
@@ -27,6 +28,7 @@ rav1e = { version = "0.6.3", features = ["wasm"] }
 [features]
 default = ["asm"]
 asm = ["rav1e/asm"]
+static = ["load_image/lcms2-static"]
 
 [profile.release]
 lto = true
