--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -14,7 +14,7 @@ include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 
 [dependencies]
 avif-serialize = "0.8.1"
-rav1e = { version = "0.6.3", default-features = false, features = ["threading"] }
+rav1e = { version = "0.6.5", default-features = false, features = ["threading"] }
 rayon = "1.6.1"
 rgb = "0.8.34"
 imgref = "1.9.4"
@@ -22,7 +22,7 @@ loop9 = "0.1.3"
 quick-error = "2.0.1"
 
 [target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
-rav1e = { version = "0.6.3", features = ["wasm"] }
+rav1e = { version = "0.6", default-features = false, features = ["wasm"] }
 
 [features]
 default = ["asm"]
