--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ravif"
 description = "rav1e-based pure Rust library for encoding images in AVIF format (powers the `cavif` tool)"
-version = "0.11.5"
+version = "0.11.7"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2021"
 license = "BSD-3-Clause"
@@ -11,14 +11,15 @@ categories = ["multimedia::images", "multimedia::encoding"]
 homepage = "https://lib.rs/ravif"
 repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
+rust-version = "1.79" # bitstream-io breaks it
 
 [dependencies]
 avif-serialize = "0.8.1"
 rav1e = { version = "0.7", default-features = false, features = ["threading"] }
-rayon = "1.7.0"
-rgb = "0.8.36"
-imgref = "1.9.4"
-loop9 = "0.1.3"
+rayon = "1.10.0"
+rgb = "0.8.37"
+imgref = "1.10.1"
+loop9 = "0.1.5"
 quick-error = "2.0.1"
 
 [target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
