--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ categories = ["command-line-utilities", "multimedia::images", "multimedia::encod
 homepage = "https://lib.rs/cavif"
 repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
-rust-version = "1.64"
+rust-version = "1.65"
 
 [dependencies]
 ravif = { version = "0.11.8", path = "./ravif", default-features = false }
 rayon = "1.10.0"
-rgb = "0.8.42"
-cocoa_image = { version = "1.0.6", optional = true }
+rgb = { version = "0.8.48", default-features = false }
+cocoa_image = { version = "1.0.7", optional = true }
 imgref = "1.10.1"
 clap = { version = "4.3.24", default-features = false, features = ["color", "suggestions", "wrap_help", "std", "cargo"] }
 load_image = "3.0.3"
