--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ravif"
 description = "rav1e-based pure Rust library for encoding images in AVIF format (powers the `cavif` tool)"
-version = "0.11.9"
+version = "0.11.10"
 authors = ["Kornel Lesiński <kornel@geekhood.net>"]
 edition = "2021"
 license = "BSD-3-Clause"
@@ -16,8 +16,8 @@ rust-version = "1.79" # bitstream-io breaks it
 [dependencies]
 avif-serialize = "0.8.1"
 rav1e = { version = "0.7", default-features = false }
-rayon = { version= "1.10.0", optional = true }
-rgb = "0.8.42"
+rayon = { version = "1.10.0", optional = true }
+rgb = { version = "0.8.48", default-features = false }
 imgref = "1.10.1"
 loop9 = "0.1.5"
 quick-error = "2.0.1"
