Reformat code and introduce `rustfmt` check in CI

--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -3,7 +3,7 @@ binop_separator = "Back"
 chain_width = 120
 comment_width = 222
 condense_wildcard_suffixes = true
-disable_all_formatting = true
+# disable_all_formatting = true
 edition = "2021"
 enum_discrim_align_threshold = 5
 fn_call_width = 120
