README: Add missing `https:` prefix in many `lib.rs` links
By missing `https:`, the [current crates.io page for `cavif`] and
[`ravif`] seem to link straight to files in the GitHub repository, which
doesn't exist.  lib.rs in contrast seems to link this correctly to its
own site.

For `cavif`, also mention that it goes through the `ravif` crate which
disambiguates the first paragraphs of both crates and makes it easier to
understand the total dependency hierarchy.

[current crates.io page for `cavif`]: https://crates.io/crates/cavif/1.5.6
[`ravif`]: https://crates.io/crates/ravif/0.11.11

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "BSD-3-Clause"
 readme = "README.md"
 keywords = ["avif", "png2avif", "jpeg2avif", "convert", "av1"]
 categories = ["command-line-utilities", "multimedia::images", "multimedia::encoding"]
-homepage = "https://lib.rs/cavif"
+homepage = "https://lib.rs/crates/cavif"
 repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "/src/*.rs"]
 rust-version = "1.70"
