--- a/ravif/Cargo.toml
+++ b/ravif/Cargo.toml
@@ -8,7 +8,7 @@ license = "BSD-3-Clause"
 readme = "README.md"
 keywords = ["avif", "convert", "av1", "rav1f", "cav1f"]
 categories = ["multimedia::images", "multimedia::encoding"]
-homepage = "https://lib.rs/ravif"
+homepage = "https://lib.rs/crates/ravif"
 repository = "https://github.com/kornelski/cavif-rs"
 include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
 rust-version = "1.70" # as low as `cargo -Zminimal-versions generate-lockfile` will let us go
